@@ -1,3 +1,0 @@
-      FUNCTION ADD1(IA, IB)
-          ADD1 = IA + IB
-      END
