@@ -1,9 +1,0 @@
-! Fortran 95 version
-
-function add3(a, b) result(ret)
-  implicit none
-  integer :: a
-  integer :: b
-  integer :: ret
-  ret = a + b
-end function add3
