@@ -1,3 +1,0 @@
-      FUNCTION ADD(IA, IB)
-          ADD = IA + IB
-      END
